<resources>
    <string name="app_name">MLCplus</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="create_label">Welcome munchkin!</string>
    <string name="gender_choose">Choose your gender</string>
    <string name="done">Done</string>
    <string name="who_are_you">Who are you?</string>
    <string name="create">Create</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="create_activity_toast">"You don't choose your character name, gender or both!"</string>
    <string name="player_name">Player name</string>
    <string name="level">Level</string>
    <string name="bonus">Bonus</string>
    <string name="change_gender">Change gender</string>
    <string name="strength">Strenght</string>
    <string name="leave_game_title">Leave the game?</string>
    <string name="leave_game">Are you sure you want to leave the game?</string>
    <string name="exit">Exit</string>
    <string name="gender_curse">Gender curse</string>
    <string name="game_label">Your character</string>
    <string name="title_final">You win!</string>
    <string name="message_final">You are winner! Would you like to continue the game?</string>
    <string name="epic_mode">Epic mode</string>
    <string name="about_label">About</string>
    <string name="about_text">MLCplus\nThis is game assistant for desktop game Munchkin\nDeveloped by Alexandr Osadchiy </string>
    <string name="Modificators">Modificators</string>

</resources>
