<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context="com.example.osads.mlcplus.CreateActivity">


    <RadioGroup
        android:id="@+id/radio_group_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:layout_marginEnd="75dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="120dp"
        app:layout_constraintBottom_toTopOf="@+id/create_player_button"
        app:layout_constraintEnd_toStartOf="@+id/image_view_player"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <RadioButton
            android:id="@+id/radio_button_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <Space
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radio_button_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/who_are_you"
            android:textColorHint="@color/colorPrimary"
            android:inputType="textPersonName" />

        <ImageButton
            android:id="@+id/clear_name_button"
            style="@android:style/Widget.ImageButton"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@color/color_background"
            android:onClick="onClickClearName"
            app:srcCompat="@drawable/clear_axe" />

    </LinearLayout>

    <Button
        android:id="@+id/create_player_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:onClick="onClickCreatePlayer"
        android:text="@string/create"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/color_background"
        />

    <ImageView
        android:id="@+id/image_view_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="43dp"
        android:background="@drawable/no_gender_munch"
        app:layout_constraintBottom_toTopOf="@+id/create_player_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radio_group_gender"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/border_x" />

</android.support.constraint.ConstraintLayout>